Fixed mobile layout issues

--- a/src/CssCodes/Myprojectss.css
+++ b/src/CssCodes/Myprojectss.css
@@ -176,9 +176,28 @@
 /* till now  */
 
 /* RESPONSIVE */
-@media (max-width: 768px) {
+@media (min-width: 601px) and (max-width:1000px) {
+    .projects-container {
+       
+                margin-top: 10%;
+                width: 100%;
+                min-height: 20vh;
+                display: flex;
+                justify-content: center;
+                /* Horizontal center */
+                align-items: center;
+                /* Vertical center */
+        
+                text-align: center;
+                /* background: #f8f9fa; */
+            
+        }
+
+}
+
+@media (max-width: 600px) {
     .heading {
-        font-size: 30px;
+        font-size: 20px;
     }
 
     .projects-grid {
@@ -188,6 +207,33 @@
         padding: 5px 10px;
             font-size: 1em;
     }
+    .projects-container {
+    margin-top: 20%;
+    width: 100%;
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    /* Horizontal center */
+    align-items: center;
+    /* Vertical center */
+
+    text-align: center;
+    /* background: #f8f9fa; */
+}
+
+/* Inner content */
+.projects-content {
+    max-width: 700px;
+    padding: 20px;
+}
+
+/* Heading */
+.projects-content h1 {
+    font-size: 40px;
+    font-weight: 700;
+    color: black;
+    margin-bottom: 10px;
+}
 }
 
 /* in portfolio btn */
